fixed not centered arrow

--- a/sass/_animation.scss
+++ b/sass/_animation.scss
@@ -17,7 +17,7 @@
  */
 @keyframes bounce-top {
 	0% {
-		transform: translateY(-45px);
+		transform: translate(-50%, -45px);
 		animation-timing-function: ease-in;
 		opacity: 1;
 	}
@@ -25,11 +25,11 @@
 		opacity: 1;
 	}
 	40% {
-		transform: translateY(-24px);
+		transform: translate(-50%, -24px);
 		animation-timing-function: ease-in;
 	}
 	65% {
-		transform: translateY(-12px);
+		transform: translate(-50%, -12px);
 		animation-timing-function: ease-in;
 	}
 
@@ -37,11 +37,11 @@
 	55%,
 	75%,
 	87% {
-		transform: translateY(0px);
+		transform: translate(-50%, 0px);
 		animation-timing-function: ease-out;
 	}
 	100% {
-		transform: translateY(0px);
+		transform: translate(-50%, 0px);
 		animation-timing-function: ease-out;
 		opacity: 1;
 	}
