--- a/sass/style.scss
+++ b/sass/style.scss
@@ -126,7 +126,7 @@ header {
 		left: 50%;
 		transform: translateX(-50%);
         bottom: 20px;
-        font-size: 60px;
+        font-size: 36px;
         color: $white;
     }
 }
